--- a/src/main/resources/templates/cs/board/moduleList.html
+++ b/src/main/resources/templates/cs/board/moduleList.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>케이마켓 고객센터</title>
     <link rel="stylesheet" th:href="@{/css/Cs_style.css}"/>
+    
 </head>
 <body>
     <div id="container">
@@ -22,7 +23,8 @@
           </div>
           <div class="logo">
             <div>
-              <a th:href="@{/cs/index}"><img th:src="@{/images/logo.png}" alt="로고" />고객센터</a>
+              <a th:href="@{/cs/index}"><img th:src="@{/images/header_logo.png}" alt="로고">고객센터</a>
+              
             </div>
           </div>
         </header>
