--- a/src/main/resources/templates/admin/layout/cs/faqmodify.html
+++ b/src/main/resources/templates/admin/layout/cs/faqmodify.html
@@ -10,7 +10,7 @@ layout:decorate="/admin/index.html">
 	            </p>
 	        </nav>
 	    <article>
-            <form th:action="@{'/admin/layout/cs/faqmodify?no=' + ${faqmodify.no}}" method="post">
+            <form th:action="@{/admin/layout/cs/faqmodify}" method="post">
                 <section>
                     <table>
                     	<tr>
