--- a/src/main/resources/templates/admin/layout/cs/faqview.html
+++ b/src/main/resources/templates/admin/layout/cs/faqview.html
@@ -13,7 +13,7 @@ layout:decorate="/admin/index.html">
 			<table class="cstable">
 				<tr class="cstable1">
 					<td>유형</td>
-					<td>[[${faqview.cate1}]]</td>
+					<td>[[${faqview.f}]] - [[${faqview.f2}]]</td>
 				</tr>
 				<tr class="cstable2">
 					<td>제목</td>
