--- a/src/main/resources/templates/admin/layout/cs/qnaWrite.html
+++ b/src/main/resources/templates/admin/layout/cs/qnaWrite.html
@@ -11,7 +11,7 @@ layout:decorate="/admin/index.html">
 	        </nav>
 	    <article>
             <form action="${ctxPath}/admin/qna/answer.do" method="post">
-            <input type="hidden" name="group" value="">
+            <input type="hidden" name="group" value="3">
             <input type="hidden" name="no" value="">
             <input type="hidden" name="uid" value="">
             <input type="hidden" name="cate1" value="">
