--- a/src/main/resources/templates/admin/layout/cs/faqWrite.html
+++ b/src/main/resources/templates/admin/layout/cs/faqWrite.html
@@ -12,6 +12,7 @@ layout:decorate="/admin/index.html">
 	    <article>
             <form action="/admin/layout/cs/faqWrite" method="post">
 			<input type="hidden" name="uid" value="admin"/>
+			<input type="hidden" name="group" value="2"/>
                 <section>
                     <table>
                     	<tr>
