--- a/src/main/resources/templates/admin/layout/cs/noticeview.html
+++ b/src/main/resources/templates/admin/layout/cs/noticeview.html
@@ -13,7 +13,7 @@ layout:decorate="/admin/index.html">
 			<table class="cstable">
 				<tr class="cstable1">
 					<td>유형</td>
-					<td>[[${noticeview.cate1}]]</td>
+					<td>[[${noticeview.notice_cate1_name}]]</td>
 				</tr>
 				<tr class="cstable2">
 					<td>제목</td>
