--- a/src/main/resources/templates/admin/layout/cs/qnalist.html
+++ b/src/main/resources/templates/admin/layout/cs/qnalist.html
@@ -34,11 +34,11 @@
                     <th>관리</th>
                 </tr>
 
-                <tr class="row" th:each="qnalist : ${pageResponseDTO.dtoList}">
+                <tr class="row" th:each="qnalist : ${qnalist}">
                     <td style="text-align:center; width:5%"><input type="checkbox" name="chk"></td>
                     <td style="text-align:center; width:5" th:text="${qnalist.no}"></td>
-                    <td style="text-align:center; width:10%" th:text="${qnalist.cate1}"></td>
-                    <td style="text-align:center; width:10%" th:text="${qnalist.cate2}"></td>
+                    <td style="text-align:center; width:10%" th:text="${qnalist.q}"></td>
+                    <td style="text-align:center; width:10%" th:text="${qnalist.q2}"></td>
                     <td style="text-align:center; width:40%">
                         <a th:href="@{/admin/layout/cs/qnaview(no=${qnalist.no})}" th:text="${qnalist.title}"></a>
                     </td>
@@ -54,20 +54,7 @@
             <input type="button" value="선택 삭제" class="csDelete"/>
 
             <div class="paging">
-                <span th:if="${pageResponseDTO.prev}" class="prev" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
-                    <a th:href="@{/admin/layout/cs/qnalist(group=${pageResponseDTO.group},pg=${pageResponseDTO.start - 1})}">이전</a>
-                </span>
-
-                <span th:each="num: ${#numbers.sequence(pageResponseDTO.start, pageResponseDTO.end)}"
-                    class="num"
-                    aria-controls="dataTables-example"
-                    tabindex="0">
-                    <a th:href="@{/admin/layout/cs/qnalist(group=${pageResponseDTO.group},pg=${num})}" th:text="${num}"></a>
-                </span>
-
-                <span th:if="${pageResponseDTO.next}" class="next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
-                    <a th:href="@{/admin/layout/cs/qnalist(group=${pageResponseDTO.group},pg=${pageResponseDTO.end + 1})}">다음</a>
-                </span>
+                
             </div>
         </section>
     </section>
