--- a/src/main/resources/templates/admin/layout/cs/qnaview.html
+++ b/src/main/resources/templates/admin/layout/cs/qnaview.html
@@ -13,7 +13,7 @@ layout:decorate="/admin/index.html">
 			<table class="cstable">
 				<tr class="cstable1">
 					<td>유형</td>
-					<td>[[${qnaview.cate1}]] - [[${qnaview.cate2}]]</td>
+					<td>[[${qnaview.q}]] - [[${qnaview.q2}]]</td>
 				</tr>
 				<tr class="cstable2">
 					<td>제목</td>
