--- a/src/main/resources/templates/side.html
+++ b/src/main/resources/templates/side.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <link rel="stylesheet" href="../css/product.css" />
     <link rel="stylesheet" href="../css/common.css" />
+  
 
 </head>
 
@@ -22,10 +23,10 @@
         <header>
             <div class="top">
                 <div>
-                    <a href="#">로그인</a>
-                    <a href="#">회원가입</a>
+                    <a th:href="@{/member/login}">로그인</a>
+                    <a th:href="@{/member/join}">회원가입</a>
                     <a href="#">마이페이지</a>
-                    <a href="#">
+                    <a th:href="@{/product/productCart}">
                         <i class="fa fa-shopping-cart" aria-hidden="true">
                             &nbsp;장바구니
                         </i>
@@ -35,8 +36,8 @@
             <div class="logo">
                 <div>
                     <a th:href="@{/}"><img src="../images/header_logo.png" alt="로고"></a>
-                    <form action="#">
-                        <input type="text" name="keyword">
+                    <form th:action="@{/product/productSearch}">
+                        <input type="text" name="search">
                         <button>
                             <i class="fa fa-search" aria-hidden="true"></i>
                         </button>
@@ -131,7 +132,7 @@
             <strong>고객센터</strong><br>
             Tel : 1899-7000(유료) (평일 09:00~18:00)<br>
             Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br>
-            App Version:LotteON-0.0.6-SNAPSHOH
+            App Version:LotteON-0.0.7-SNAPSHOH
           </p>
         </div>
       </footer>
