--- a/src/main/resources/templates/admin/layout/cs/qnaWrite.html
+++ b/src/main/resources/templates/admin/layout/cs/qnaWrite.html
@@ -10,17 +10,16 @@ layout:decorate="/admin/index.html">
 	            </p>
 	        </nav>
 	    <article>
-            <form action="${ctxPath}/admin/qna/answer.do" method="post">
-            <input type="hidden" name="group" value="3">
-            <input type="hidden" name="no" value="">
-            <input type="hidden" name="uid" value="">
-            <input type="hidden" name="cate1" value="">
-            <input type="hidden" name="cate2" value="">
-            <input type="hidden" name="title" value="">
+            <form th:action="@{/admin/layout/cs/qnaWrite}" method="post">
+            <input type="hidden" name="group" th:value="${qnaWrite.group}">
+            <input type="hidden" name="no" th:value="${qnaWrite.no}">
+            <input type="hidden" name="uid" value="bin">
+            <input type="hidden" name="cate1" th:value="${qnaWrite.cate1}">
+            <input type="hidden" name="cate2" th:value="${qnaWrite.cate2}">
 			<table class="cstable">
 				<tr class="cstable1">
 					<td>유형</td>
-					<td>[[${qnaWrite.cate1}]]-[[${qnaWrite.cate2}]]</td>
+					<td>[[${qnaWrite.q}]]-[[${qnaWrite.q2}]]</td>
 				</tr>
 				<tr class="cstable2">
 					<td>제목</td>
