--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -4,7 +4,11 @@
   padding: 16px;
   box-sizing: border-box;
 }
-
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 #product > section > nav {
     width: 100%;
     height: 36px;
