--- a/src/main/resources/templates/side.html
+++ b/src/main/resources/templates/side.html
@@ -47,18 +47,18 @@
             <div class="menu">
                 <div>
                     <ul>
-                        <li><a href="#">히트상품</a></li>
-                        <li><a href="#">추천상품</a></li>
-                        <li><a href="#">최신상품</a></li>
-                        <li><a href="#">인기상품</a></li>
-                        <li><a href="#">할인상품</a></li>
+                          <li><a th:href="@{/product/productList(type=1)}">히트상품</a></li>
+			              <li><a th:href="@{/product/productList(type=2)}">추천상품</a></li>
+			              <li><a th:href="@{/product/productList(type=3)}">최신상품</a></li>
+			              <li><a th:href="@{/product/productList(type=4)}">인기상품</a></li>
+			              <li><a th:href="@{/product/productList(type=5)}">할인상품</a></li>
                     </ul>
                     <ul>
                         <li><a href="#">쿠폰존</a></li>
                         <li><a href="#">사용후기</a></li>
                         <li><a href="#">개인결제</a></li>
-                        <li><a href="#">고객센터</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a th:href="@{/cs}">고객센터</a></li>
+                        <li><a th:href="@{/cs/faq}">FAQ</a></li>
                     </ul>
                    
                 </div>
@@ -132,7 +132,7 @@
             <strong>고객센터</strong><br>
             Tel : 1899-7000(유료) (평일 09:00~18:00)<br>
             Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br>
-            App Version:LotteON-0.0.7-SNAPSHOH
+            App Version:LotteON-0.0.9-SNAPSHOH
           </p>
         </div>
       </footer>
